# car-logos

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: deploy_pages.yml  update_logos.yml
logo_dl/: .gitignore  README.md  downloader.py  main.py  pyproject.toml
logo_dl/downloader/: __init__.py  logo_dl.py  models.py  utils.py
logo_dl/logos/: logos.json
ui/: bun.lockb  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
ui/logos/: logos.json
ui/public/: logos.json
ui/src/: App.tsx  logos.json  main.tsx
ui/src/app/: layout.tsx  page.tsx  style.scss
ui/src/app/[search]/: page.tsx
ui/src/components/: Company.tsx  Loading.tsx  Modal.tsx  Search.tsx  SearchItem.tsx
ui/src/pages/: Home.tsx  View.tsx
ui/src/style/: tvl.scss
ui/tests/: App.test.ts  imgdb.mock.ts
